log
Thu 16 May 2024 09:08:35 PM UTC: 
 tests:  0|5
total_score: 0/70
8fc8320
Thu 16 May 2024 09:13:58 PM UTC: 
 sudoku.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  0|5
total_score: 0/70
330b9b8
Thu 16 May 2024 09:15:19 PM UTC: 
 sudoku.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 0/70
c12bee8
Thu 16 May 2024 09:16:14 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
9ad5954
Thu 16 May 2024 09:22:37 PM UTC: 
 sudoku.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:47:11: error: unused variable ‘k’ [-Werror=unused-variable]
   47 |   int i,j,k;
      |           ^
cc1: all warnings being treated as errors
Compilation failed
16b76bd
Thu 16 May 2024 09:22:47 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7cf27f4
Thu 16 May 2024 09:25:30 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 35/70
0e82fb0
